ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail6.ligo
function t (const x : list(int)) is
  case x of
  | a -> 0
  | hd#tl -> 0
  end